# ChangeLog for media-sound/pragha
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/pragha/ChangeLog,v 1.24 2012/11/28 12:40:31 ssuominen Exp $

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> pragha-1.1.1.ebuild:
  EAPI5

  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -pragha-1.0.2.ebuild:
  old

  16 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> pragha-1.1.1.ebuild:
  x86 stable, see bug 429484

  27 Oct 2012; <ago@gentoo.org> pragha-1.1.1.ebuild:
  Stable for amd64, wrt bug #429484

  25 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> -pragha-1.1.0.ebuild,
  -pragha-1.1.0.1.ebuild:
  old

*pragha-1.1.1 (25 Aug 2012)

  25 Aug 2012; Samuli Suominen <ssuominen@gentoo.org> +pragha-1.1.1.ebuild:
  Version bump.

  01 Jul 2012; Samuli Suominen <ssuominen@gentoo.org> pragha-1.0.2.ebuild,
  pragha-1.1.0.ebuild, pragha-1.1.0.1.ebuild:
  Pin dev-libs/keybinder to SLOT="0" for GTK+-2.x version.

*pragha-1.1.0.1 (22 Jun 2012)

  22 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +pragha-1.1.0.1.ebuild:
  Version bump.

*pragha-1.1.0 (18 Jun 2012)

  18 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +pragha-1.1.0.ebuild:
  Version bump.

  18 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> -pragha-1.0.1.ebuild:
  old

  18 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> pragha-1.0.2.ebuild:
  amd64/x86 stable

*pragha-1.0.2 (02 Jun 2012)

  02 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +pragha-1.0.2.ebuild,
  metadata.xml:
  Version bump.

  22 May 2012; Samuli Suominen <ssuominen@gentoo.org> -pragha-1.0_rc3.ebuild:
  old

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> pragha-1.0.1.ebuild:
  marked x86 per bug 416233

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> pragha-1.0.1.ebuild:
  Stable for amd64, wrt bug #416223

  05 May 2012; Michał Górny <mgorny@gentoo.org> pragha-1.0_rc3.ebuild,
  pragha-1.0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig
