@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST pragha-1.1.1.tar.bz2 576335 SHA256 eab121f6cf59980d43510fedc7afcbe4d0c42b9b09bd5794d482e3d2a6a19806 SHA512 d8777f645c7101ef233f754e88e47dd6a0e16f69f95b8df594851ae6fce249cd310556f93f241087c273e68a8ba9aeff56e3441d02b895e59f0edcd30e27dd47 WHIRLPOOL e5ba775b3adffd7d31dbed917f400e709ca1c76a650d0fe66c57484de8d2a7db052f11d089112039421e197658263a04a921db5075950826e9fd178265c86dc9
-EBUILD pragha-1.1.1.ebuild 1445 SHA256 8fdcb5e97b99331defa2d09cd761210e1b5c56faaad7ba3219d389809bccc852 SHA512 5efdd47275647ced00d0ec01c550043fd5c2344fe71e1b0627af8a3b0fd382b7d0768bbab6d7079f2438e9bbe02e7d46fbd397682e163f087464b5429a5f7189 WHIRLPOOL 06ff84a828497f0329e74743d6b1f1030b528dbdec3f80f9579a7805edf2604b19db0585aa078125ef42835d7ef6ceff6dbd2204e81cd2548a71090fba563378
-MISC ChangeLog 2851 SHA256 551c767688922d68377254091f2245466f81a9a867abde888cda60ac92092690 SHA512 3fb59dd3700cf762ead35367b7a41d65a1c22bbda02e25a2f9f17f181a8f0b9d80ead41868e2f7f96bb2ed87ffe86e6ac992deabd52b0871ac2a8db7fef6befc WHIRLPOOL ba255493e55e398ef797b35db90b2908ba2aca65430789e085c953726d44a0345875ef37d1e4b422762abd712ea9b6d35200ac21e149b5e6dca6c0c4b63d881d
+EBUILD pragha-1.1.1.ebuild 1608 SHA256 6b4c1f98ea71004ad57d29ce258150d2d413bb9af6141e73ac286a8c565f2593 SHA512 6e0c76a6fe7d6b74e354d4dc8744c3b4d99e6efcdf579269b9a2b4033843e3089b97dfbe9a3c0b1854eff0d6e48862a21a576ad2ce19b8932c471f2735d5a1b9 WHIRLPOOL 1ce5c26b482fa479447562bf8fca4194f8a6b17cfd858e700ad99cfd6bdd7e9b3de984297c843ce187032e4ef695e856b4a726ffff88c9af17b5f0ab49d372fb
+MISC ChangeLog 2977 SHA256 4dd83a20ef0633ae94c513af493b0a866b190aaf2aff7904cc563c24aac36c44 SHA512 6eec10eb2f617aa9e615d5d52171fb7ffab45b2d216919c9aac9b21571cfa93a51be0b990031ff00c5f39e16a732d00340d317147ca9456614d855bc58fc0f73 WHIRLPOOL 413d24d6d23e2cc5eb66988189ca7090161dd345a4ffbd87ca78e70fcc8e77bfb130ec46eaac2619a6b669b2e226c9051a20fcde4d5fe9a6228ca3d019fa1c78
 MISC metadata.xml 482 SHA256 c8c546dfadf8520ece148039277dd3fe4813ff26b1563781366b227244c382c8 SHA512 38a16724ff16a51b2c1f38cca80dc588babe32c9e4a9fcf92cbe728310aaf31114455c6e552d84dea5732be4f1b1919f2c403549174d3e6f03a8f8206dbc829b WHIRLPOOL 52d9de787eca8974f7a633a3d8aeb1992a5398f99628edf2bee351d8169f53d7a7410a715ab5952406d2130defcb3d7b3823d8e3b37fa625a4c1058a7bfafa46
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQtgYKAAoJEEdUh39IaPFNnsIH/iQHClDfzCZAO3rCNR/86orP
-TfISaw1RDhZy2MByDF0PUyHjQbno5VNyHgC2sCrp+PfxVzdvtJxpxVmYQSfBEaR7
-Czws9Zo4Pg3tVczFW3w3Jhzov4U+ty3kBCawSfsORwSlOVyW9mLHYtSP3trgyQxI
-Etv4+B70ZJ2/nlpy1MVW2zvmcnWGiziv02lul8ZbQVTVCVbFknh/W2u/RCuTYzUi
-I8RwCNnse+6InkFod1DUQ8+uYDgzupkdr5NLS/7AuinNtUtdvr8AWhpNwSUOtTz4
-Vi1xp3FBZk5K/5Nn9wJAFv/TLLISrNaDC6mf/dz5DTUQwgpyCd0JQt+FvzA9omo=
-=C8m/
+iQEbBAEBCAAGBQJQ9axhAAoJEEdUh39IaPFNEYkH+NXYJPfKsUxNr4LaH+7R1RGT
+Qqco0qCI8Ii/iLfT+QBfKCPzgvm57G544oPwO/uV+6M0oN7QVgrRbZK85ZOGRT2S
+UTRW585J9WI3rlOpdhYT+45G0bqycJXVPcU4biRHmqK4kkiFah3/rF2dmBF33TOi
+3IRP83YnrP93RXbPOUunLdZqRcfEbh4EXPFDVt8WO95zuBj25Q8u2cts6RUwjHFF
+f8TmnRCYu7SPo3nsJgzIkQ0r+5l8opRZio4ymxPqJwgrw1lVkNj+5MpVgFzpEKw+
+lJtO+w1wGbOlbOSX4gT3quvwEbST+ohRzDfErhuXq3fQSRA2WgAwuRLh+AwV0w==
+=LLU2
 -----END PGP SIGNATURE-----
