@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/pragha/pragha-1.1.1.ebuild,v 1.4 2012/11/28 12:40:31 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/pragha/pragha-1.1.1.ebuild,v 1.5 2013/01/15 19:23:19 ssuominen Exp $
 
 EAPI=5
 inherit xfconf
@@ -18,7 +18,7 @@ COMMON_DEPEND="dev-db/sqlite:3
 	>=dev-libs/dbus-glib-0.98
 	>=dev-libs/glib-2.28
 	>=dev-libs/keybinder-0.2.2:0
-	>=dev-libs/libcdio-0.78
+	|| ( dev-libs/libcdio-paranoia <dev-libs/libcdio-0.90 )
 	media-libs/gst-plugins-base:0.10
 	>=media-libs/libcddb-1.3.2
 	>=media-libs/taglib-1.7.1
@@ -47,6 +47,10 @@ pkg_setup() {
 }
 
 src_prepare() {
+	if has_version dev-libs/libcdio-paranoia; then
+		sed -i -e '/#include/s:cdio/cdda.h:cdio/paranoia/cdda.h:' src/cdda.h || die
+	fi
+
 	sed -i -e '/CFLAGS/s:-g -ggdb -O0::' configure || die
 	xfconf_src_prepare
 }
